# bouncing-ball-in-rust

./: Cargo.toml  readme.md
src/: ball_video.rs  main.rs  multiplying_balls.rs
