[package]
name = "bouncing_ball"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.6.0"
nalgebra = "0.29.0"
mint = "0.5.8"
rand = "0.8.5"
tempfile = "3.3.0"
image = "0.23.14"
crossbeam = "0.8.1"

[[bin]]
name = "bouncing_ball"
path = "src/main.rs"

[[bin]]
name = "multiplying_balls"
path = "src/multiplying_balls.rs"

[[bin]]
name = "ball_video"
path = "src/ball_video.rs"